# python_piscine42

module00/ex00/: ft_hello_garden.py
module00/ex01/: ft_garden_name.py
module00/ex02/: ft_plot_area.py
module00/ex03/: ft_harvest_total.py
module00/ex04/: ft_plant_age.py
module00/ex05/: ft_water_reminder.py
module00/ex06/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module00/ex07/: ft_seed_inventory.py
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_garden_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: ft_garden_security.py
module01/ex5/: ft_plants_type.py
module01/ex6/: ft_garden_analytics.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_raise_exception.py
module02/ex2/: ft_different_errors.py
module02/ex3/: ft_custom_errors.py
module02/ex4/: ft_finally_block.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py  ft_inventory_system.py
module03/ex6/: ft_data_alchemist.py
module04/ex0/: ft_ancient_text.py
module04/ex1/: ft_archive_creation.py
module06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_1.py  ft_transmutation_2.py
module07/: battle.py  capacitor.py  tournament.py
module08/ex1/: loading.py  pyproject.toml
module10/: data_generator.py
(+29 files in other folders)
