[tool.poetry]
name = "loading-programs"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.24"
requests = "^2.28"
matplotlib = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"